adding more info on the first chapter

--- a/Libro_De_Fisica.tex
+++ b/Libro_De_Fisica.tex
@@ -13,13 +13,29 @@
 \usepackage{tcolorbox}
 \usepackage[tikz]{bclogo}
 \usepackage{lipsum}
+\usepackage{cancel}
 
-\newcommand{\me}{$m$}
-\newcommand{\seg}{$s$}
-\newcommand{\kg}{$Kg$}
-\newcommand{\f}{$f$}
-\newcommand{\inc}{$in$}
-\newcommand{\gr}{$gr$}
+\newcommand{\gm}{$Gm$ }
+\newcommand{\km}{$Km$ }
+\newcommand{\Hm}{$Hm$ }
+\newcommand{\Dm}{$Dm$ }
+\newcommand{\m}{$m$ }
+\newcommand{\cm}{$cm$ }
+
+\newcommand{\mile}{$milla$ }
+
+\newcommand{\s}{$s$ }
+\newcommand{\ms}{$ms$ }
+\newcommand{\h}{$h$ }
+
+\newcommand{\kg}{$Kg$ }
+\newcommand{\gr}{$gr$ }
+
+\newcommand{\f}{$f$ }
+
+\newcommand{\inc}{$in$ }
+
+
 
 \setlength{\topmargin}{-.5in}
 \setlength{\textheight}{9in}
@@ -109,7 +125,7 @@ skipabove=\topsep,skipbelow=\topsep
 \input{introduccion_bases.tex}
 \section{Sistemas de medida.}
 \input{sistema_metrico_decimal.tex}
-\section{Ordenes de magnitud.}
+\section{\'Ordenes de magnitud.}
 \input{orden_magnitud.tex}
 \section{Conversi\'on de unidades.}
 \input{conversion.tex}
