--- a/comp_table.tex
+++ b/comp_table.tex
@@ -1,22 +1,21 @@
 \begin{table}[h]
-\label{tab_app_MKS}
 \huge
 \begin{center}
 \begin{tabular}{|lcr|}
 \hline
  & & \\
-Distancia & $\rightarrow$ & metros [\me] \\
+Distancia & $\rightarrow$ & metros [\m] \\
 Masa & $\rightarrow$ & Kilogramos [\kg] \\
-Tiempo & $\rightarrow$ & Segundos [\seg] \\
+Tiempo & $\rightarrow$ & Segundos [\s] \\
  & & \\
 \hline
 \end{tabular}
 \end{center}
 \caption{Sistema M\'etrico Decimal tambien llamado sistema MKS o sistema internacional.} 
+\label{tab_app_MKS}
 \end{table}
 
 \begin{table}[h]
-\label{tab_app_SI}
 \huge
 \begin{center}
 \begin{tabular}{|lcr|}
@@ -24,10 +23,11 @@ Tiempo & $\rightarrow$ & Segundos [\seg] \\
  & & \\
 Distancia & $\rightarrow$ & Feet [\f] \\
 Masa & $\rightarrow$ & Gramos [\gr] \\
-Tiempo & $\rightarrow$ & Segundos [\seg] \\
+Tiempo & $\rightarrow$ & Segundos [\s] \\
  & & \\
 \hline
 \end{tabular}
 \end{center}
 \caption{Sistema Ingles.} 
+\label{tab_app_SI}
 \end{table}
