--- a/estimaciones.tex
+++ b/estimaciones.tex
@@ -9,14 +9,14 @@ Los problemas de Fermi son problemas de estimaci\'on. Son \'utiles para obtener 
 \begin{tcolorbox}[colback=green!5!white,colframe=green!75!black,boxrule=0.5pt,arc=4pt,left=6pt,right=6pt,top=6pt,bottom=6pt,boxsep=0pt]
 Algunos ejemplos son:\\
 \begin{itemize}
-\item Cuantos afinadores de piano hay en chicago?
-\item Cuantas gotas de agua caben en un vaso?
-\item Cuantas posibles parejas sentimentales tienes en la ciudad en la que habitas?
-\item Cuantas veces ha latido tu coraz\'on?
-\item Cuantos vasos de agua caben en una pisc\'ina?
-\item Cuantas personas viven en tu vecindario?
-\item Cuantos m\'edicos hay en tu ciudad?
-\item Cuantas caras haz visto en tu vida?
+\item ¿Cuantos afinadores de piano hay en chicago?
+\item ¿Cuantas gotas de agua caben en un vaso?
+\item ¿Cuantas posibles parejas sentimentales tienes en la ciudad en la que habitas?
+\item ¿Cuantas veces ha latido tu coraz\'on?
+\item ¿Cuantos vasos de agua caben en una pisc\'ina?
+\item ¿Cuantas personas viven en tu vecindario?
+\item ¿Cuantos m\'edicos hay en tu ciudad?
+\item ¿Cuantas caras haz visto en tu vida?
 \item etc....
 \end{itemize}
 \end{tcolorbox}
@@ -24,6 +24,7 @@ Algunos ejemplos son:\\
 \end{example}
 Resolvamos un par de problemas para entender como funciona.\\
 \begin{example}
+\small
 \begin{tcolorbox}[colback=green!5!white,colframe=green!75!black,boxrule=0.5pt,arc=4pt,left=6pt,right=6pt,top=6pt,bottom=6pt,boxsep=0pt]
 \textbf{Problema:} \textit{Cuantas veces ha latido tu corazón?}\\
 \textbf{Respuesta:}\\ 
