--- a/orden_magnitud.tex
+++ b/orden_magnitud.tex
@@ -1,9 +1,47 @@
 \label{sec_Ordenes_Magnitud}
 \begin{prere}
-\label{pre_ord_mag}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,boxrule=0.5pt,arc=4pt, left=6pt,right=6pt,top=6pt,bottom=6pt,boxsep=0pt] 
   \textbf{Los pre-requisitos para este tema son:}\\
   Saber sumar, restar, multiplicar, dividir mas los pre-requisitos de la secci\'on \ref{pre_MKS}.
 \end{tcolorbox} 
+\label{pre_ord_mag}
 \end{prere}
 
+\begin{table}[!h]
+\LARGE
+\begin{center}
+\begin{tabular}{|l|c|r|}
+\hline 
+$10^{24}$ & yotta & $Y$ \\
+$10^{21}$ & zetta & $Z$ \\
+$10^{18}$ & exa & $E$ \\
+$10^{15}$ & peta & $P$ \\
+$10^{12}$ & tera & $T$ \\
+$10^{9}$  & giga & $G$ \\
+$10^6$ & mega & $M$ \\
+$10^3$ & kilo & $K$ \\
+$10^2$ & hecto & $H$ \\
+$10$   & deca  & $D$ \\
+$1$ & unidad &  \\
+$10^{-1}$ & deci & $d$ \\
+$10^{-2}$ & centi & $c$ \\
+$10^{-3}$ & mili & $m$ \\
+$10^{-6}$ & micro & $\mu$ \\
+$10^{-9}$ & nano & $n$ \\
+$10^{-12}$ & pico & $p$ \\
+$10^{-15}$ & femto & $f$ \\
+$10^{-18}$ & atto & $a$ \\
+$10^{-21}$ & zepto & $z$ \\
+$10^{-24}$ & yocto & $y$ \\
+\hline
+\end{tabular}
+\caption{Lista de prefijos usada en el sistema internacional}
+\label{tab_ord_mag}
+\end{center}
+\end{table}
+
+No todas las cantidades son f\'aciles de describir con la misma escala, por ejemplo, las unidades de longitud para medir la distancia entre Bogot\'a y Quito son casi in\'utiles para medir la longitud de una hormiga, o el tama\~no de una c\'elula. Debido a estas diferencias de magnitudes los cient\'ificos usan \'ordenes de magnitud para describir las cantidades. Los \'ordenes de magnitud son b\'asicamente las potencias de diez necesarias para describir una cantidad con respecto a una unidad pre-definida, por ejemplo, un Kilometro (\km) es tres \'ordenes de magnitud mayor que la unidad metro. Tambi\'en se puede decir que un Gigametro (\gm) es 3 \'ordenes de magnitud mayor que un \km, etc \ldots \\ 
+Pongamos como ejemplo las distancias, en el sistema MKS el metro es la unidad base. En nuestra vida diaria estamos acostumbrados a usar metros para todo, la longitud de un carro, los metros (\m) que hay entre una calle y otra, la longitud, altura o anchura de una casa, etc \ldots
+Si quisieramos hablar de la altura de un edif\'icio, o del largo de un tren, entonces las unidades mas apropiadas ser\'ian las decenas de metros o Decametros (\Dm). Si quisieramos describir el tama~no de un estadio, o la distancia entre nuestra casa y una casa cercana, las unidades mas apropiadas ser\'ian las centenas de metros o Hectometros (\Hm). 
+Si quisieramos describir la distancia entre dos ciudades probablemente lo mas apropiado ser\'ia hablar de kilometros (\km) y asi sucesivamente. \\
+En el sistema internacional se han definido prefijos para describir una lista extensa de \'ordenes de magnitud (ver \ref{tab_ord_mag}). Estos prefijos pueden ser usados con cualquier tipo de cantidad (longitud, masa, tiempo, etc \ldots). Es de notar que los prefijos con \'ordenes de magnitud mayores a la unidad se escriben en may\'usculas, y los prefijos con \'ordenes de magnitud menores a la unidad se escriben en min\'usculas. \\
