--- a/Libro_De_Fisica.tex
+++ b/Libro_De_Fisica.tex
@@ -22,6 +22,8 @@
 \newcommand{\m}{$m$ }
 \newcommand{\cm}{$cm$ }
 
+\newcommand{\mc}{$m^2$ }
+
 \newcommand{\mile}{$milla$ }
 
 \newcommand{\s}{$s$ }
@@ -32,6 +34,7 @@
 \newcommand{\gr}{$gr$ }
 
 \newcommand{\f}{$f$ }
+\newcommand{\ff}{$f^2$ }
 
 \newcommand{\inc}{$in$ }
 
