--- a/conversion.tex
+++ b/conversion.tex
@@ -42,6 +42,20 @@ Sabemos que 1.6 \km = 1 \mile, entonces\\
 \end{align}
 \end{tcolorbox}
 \end{example}  
+Un \'ultimo ejemplo ene el cual se necesita convertir un area ser\'ia
+\begin{example}
+\begin{tcolorbox}[colback=green!5!white,colframe=green!75!black,boxrule=0.5pt,arc=4pt,left=6pt,right=6pt,top=6pt,bottom=6pt,boxsep=0pt]
+\textbf{Problema:} \textit{Se tiene un area de 2000 \ff, ¿A Cuanto equivale esta area en \mc? }\\
+\textbf{Respuesta:}\\ 
+Sabemos que 1 \f = 0.3048 \m, por lo tanto $\frac{0.3048 m}{1 f} = 1$. Entonces:\\
+\begin{align}
+2000 feet^{2} & = 2000 feet^2 \cdot 1 \\
+       & = 2000 feet^2 (\frac{0.3048 m}{1 feet})^2\\
+       & = 2000 \cancel{feet^2} \frac{0.0929 m^2}{1 \cancel{feet^2}}\\
+       & = 185.8 m^2
+\end{align}
+\end{tcolorbox}
+\end{example}  
 
 
 
