--- a/estimaciones.tex
+++ b/estimaciones.tex
@@ -1,7 +1,7 @@
 \begin{prere}
 \begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,boxrule=0.5pt,arc=4pt, left=6pt,right=6pt,top=6pt,bottom=6pt,boxsep=0pt] 
   \textbf{Los pre-requisitos para este tema son:}\\
-  Ser curioso, mas los requisitos de la secci\'on \ref{sec_MKS}.
+  Ser curioso, mas los requisitos de la secci\'on \ref{pre_ord_mag}.
 \end{tcolorbox} 
 \end{prere}
 Los problemas de Fermi son problemas de estimaci\'on. Son \'utiles para obtener una idea de cantidades que son aparentemente imposibles de calcular de otro modo. Para resolver un problema de fermi se necesita asumir el valor de una o mas cantidades de manera aproximada para luego realizar operaciones matem\'aticas simples que dan una respuesta muy cercana a la realidad en orden de magnitud. 
