--- a/sistema_metrico_decimal.tex
+++ b/sistema_metrico_decimal.tex
@@ -24,14 +24,14 @@ Tiempo & $\rightarrow$ & Segundos [\s] \\
 \caption{Sistema M\'etrico Decimal tambien llamado sistema MKS o sistema internacional.} 
 \label{tab_MKS}
 \end{table}
-El sistema MKS no es el \'unico, existen otros sistemas usados con alta frecuencua como el sistema ingles el cual utiliza los pies o feet (\f)  para medida de distancia, gramos (\gr) para medida de masa y segundos (\s) para medida de tiempo.\\ 
+El sistema MKS no es el \'unico, existen otros sistemas usados con alta frecuencua como el sistema ingles el cual utiliza los pies o pies (\f)  para medida de distancia, gramos (\gr) para medida de masa y segundos (\s) para medida de tiempo.\\ 
 \begin{table}[h]
 \huge
 \begin{center}
 \begin{tabular}{|lcr|}
 \hline
  & & \\
-Distancia & $\rightarrow$ & Feet [\f] \\
+Distancia & $\rightarrow$ & Pies [\f] \\
 Masa & $\rightarrow$ & Gramos [\gr] \\
 Tiempo & $\rightarrow$ & Segundos [\s] \\
  & & \\
